--- a/htmlskeleton.html
+++ b/htmlskeleton.html
@@ -9,3 +9,9 @@
     <!--Add in a title tag, paragraphs, and content-->
   </body>
 </head>
+  
+
+<!--Most often, the initial document will be named index.html, learned that trying to deploy the cyson78.github.io page
+because I had named my file splashpage.html instead of index.html which through an error 404 error. Once I renamed it back to
+index.html, the website showed up again. Other than in on a Mac machine, file names are case sensitive. It will know
+all caps, upper vs lowercase, etc.-->
